--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -47,17 +47,17 @@ menu.data.event.add = Add an event
 menu.data.event.consult = List of events
 menu.CRA = CRA
 menu.data.CRA = Monitoring
-menu.data.CRA.to.validate = List dof events to monitor
-menu.MEDICAL =
-menu.data.MEDICAL =
-menu.data.MEDICAL.to.CodeAe =
-menu.data.MEDICAL.to.CodeCm =
-menu.query =
-menu.data.query =
-menu.data.query.to.consult =
-menu.data.query.to.answer =
-menu.data.query.answered =
-menu.auditTrail=
+menu.data.CRA.to.validate = Events to monitor
+menu.MEDICAL = Medical Review
+menu.data.MEDICAL = Coding
+menu.data.MEDICAL.to.CodeAe = MedDRA Coding
+menu.data.MEDICAL.to.CodeCm = WHODrug Coding
+menu.query = Query
+menu.data.query = Query management
+menu.data.query.to.consult = Consult Queries
+menu.data.query.to.answer = Queries opened
+menu.data.query.answered = Queries answered
+menu.auditTrail= Audit Trail
 
 /*---Filter---*/
 listPage.messageErrorResearch = Research needs to be less than 60 characters and without special character
@@ -186,9 +186,9 @@ visitPage.visit = Visit
 visitPage.visitLabel = Visit name 
 formPage.form = Form 
 formPage.formLabel = Form name 
-eventsPage.ListOfEventsToCodeAe =
-eventsPage.ListOfEventsToCodeCm =
-eventsPage.ListOfEventsToMonitored =
+eventsPage.ListOfEventsToCodeAe = List of AE to code
+eventsPage.ListOfEventsToCodeCm = List of CM to code
+eventsPage.ListOfEventsToMonitored = List of Events to monitor
 
 /*---DOV---*/
 dovPage.addDovTitle = Create a form Date of visit
@@ -401,39 +401,39 @@ event.inactive = Inactivate Event
 event.active = Reactivate Event
 
 /*---Query---*/
-queryPage.addQueryTitle = Create a Query
+queryPage.addQueryTitle = Create a query
 queryPage.text = Query text
-queryPage.answer =
+queryPage.answer = Query answer
 messageErrorInputQueryTextNd = Query text is mandatory
-application.create.query = Create the Query
-messageErrorInputQueryAnswerNd =
-application.update.query =
-application.close.query =
-queryPage.updateQueryTitle =
-query.dateTime =
-query.statut =
-query.dov.consult =
-query.ic.consult =
-query.dm.consult =
-query.vs.consult =
-query.te.consult =
-query.ae.consult =
-query.cm.consult =
-application.ae.query =
-application.cm.query =
-application.dm.query =
-application.dov.query =
-application.ic.query =
-application.te.query =
-application.vs.query =
+application.create.query = Create the query
+messageErrorInputQueryAnswerNd = Please answer the query
+application.update.query = Update the query
+application.close.query = Close the query
+queryPage.updateQueryTitle = Update the query
+query.dateTime = Last query update
+query.statut = Query Status
+query.dov.consult = View query DOV
+query.ic.consult = View query IC
+query.dm.consult = View query DM
+query.vs.consult = View query VS
+query.te.consult = View query TE
+query.ae.consult = View query AE
+query.cm.consult = View query CM
+application.ae.query = Create a query on AE
+application.cm.query = Create a query on CM
+application.dm.query = Create a query on DM
+application.dov.query = Create a query on DOV
+application.ic.query = Create a query on IC
+application.te.query = Create a query on TE
+application.vs.query = Create a query on VS
 
 /*---AuditTrail---*/
-auditTrailPage.ListOfAuditTrail =
-auditTrailPage.dateTime =
+auditTrailPage.ListOfAuditTrail = List of audit trails
+auditTrailPage.dateTime = Last form update
 
 /*---CRA---*/
-application.monitor =
-application.non.monitor =
+application.monitor = Monitored
+application.non.monitor = Not monitored
 
 /*---Mail---*/
 newSAE =A new SAE has been submitted for the subject
