--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -16,9 +16,9 @@ connectionpage.submit.button = Connexion
 connectionpage.return.button = Retour
 
 /*---Header---*/
-header.language = Language
-header.language.fr = French
-header.language.en = English
+header.language = Langue
+header.language.fr = Français
+header.language.en = Anglais
 
 /*---Footer---*/
 footer.copyright = Sym022©2023 sîte conçu par DEBETANCOURT Daphné et DEVOGELAERE Thomas.
@@ -47,17 +47,17 @@ menu.data.event.add = Créer un évènement
 menu.data.event.consult = Liste des évènements
 menu.CRA = ARC
 menu.data.CRA = Monitoring
-menu.data.CRA.to.validate = Liste des évènements à monitorer
-menu.MEDICAL =
-menu.data.MEDICAL =
-menu.data.MEDICAL.to.CodeAe =
-menu.data.MEDICAL.to.CodeCm =
-menu.query =
-menu.data.query =
-menu.data.query.to.consult =
-menu.data.query.to.answer =
-menu.data.query.answered =
-menu.auditTrail=
+menu.data.CRA.to.validate = Évènements à revoir
+menu.MEDICAL = Revue médicale
+menu.data.MEDICAL = Coding
+menu.data.MEDICAL.to.CodeAe = Coding MedDra
+menu.data.MEDICAL.to.CodeCm = Coding WHODrug
+menu.query = Requête
+menu.data.query = Gestion des requêtes
+menu.data.query.to.consult = Consulter les requêtes
+menu.data.query.to.answer = Requêtes ouvertes
+menu.data.query.answered = Requêtes répondues
+menu.auditTrail= Audit Trail
 
 /*---Filter---*/
 listPage.messageErrorResearch = La recherche doit faire moins de 60 caractères et ne pas contenir de caractères spéciaux
@@ -186,9 +186,9 @@ visitPage.visit = Visite
 visitPage.visitLabel = Nom de la visite
 formPage.form = Formulaire 
 formPage.formLabel = Nom du formulaire
-eventsPage.ListOfEventsToCodeAe =
-eventsPage.ListOfEventsToCodeCm =
-eventsPage.ListOfEventsToMonitored =
+eventsPage.ListOfEventsToCodeAe = Liste des EI à coder
+eventsPage.ListOfEventsToCodeCm = Liste des CM à coder
+eventsPage.ListOfEventsToMonitored = Liste des évènements à revoir
 
 /*---DOV---*/
 dovPage.addDovTitle = Créer un formulaire Date de visite
@@ -402,38 +402,38 @@ event.active = Réactiver l'évènement
 
 /*---Query---*/
 queryPage.addQueryTitle = Créer une Requête
-queryPage.text = Texte de la Requête
-queryPage.answer =
-messageErrorInputQueryTextNd = L'énoncé de la Requête est obligatoire
-application.create.query = Créer la Requête
-messageErrorInputQueryAnswerNd =
-application.update.query =
-application.close.query =
-queryPage.updateQueryTitle =
-query.dateTime =
-query.statut =
-query.dov.consult =
-query.ic.consult =
-query.dm.consult =
-query.vs.consult =
-query.te.consult =
-query.ae.consult =
-query.cm.consult =
-application.ae.query =
-application.cm.query =
-application.dm.query =
-application.dov.query =
-application.ic.query =
-application.te.query =
-application.vs.query =
+queryPage.text = Texte de la requête
+queryPage.answer = Réponse à la requête
+messageErrorInputQueryTextNd = L'énoncé de larquête est obligatoire
+application.create.query = Créer la requête
+messageErrorInputQueryAnswerNd = Veuillez répondre à la requête
+application.update.query = Mettre à jour la requête
+application.close.query = Clore la requête
+queryPage.updateQueryTitle = Mettre à jour la requête
+query.dateTime = Dernière mise à jour de la requête
+query.statut = Statut de la requête
+query.dov.consult = Consulter la requête DOV
+query.ic.consult = Consulter la requête IC
+query.dm.consult = Consulter la requête DM
+query.vs.consult = Consulter la requête VS
+query.te.consult =Consulter la requête TE
+query.ae.consult = Consulter la requête EI
+query.cm.consult = Consulter la requête CM
+application.ae.query = Créer la requête sur EI
+application.cm.query = Créer la requête sur CM
+application.dm.query = Créer la requête sur DM
+application.dov.query = Créer la requête sur DOV
+application.ic.query = Créer la requête sur IC
+application.te.query = Créer la requête sur TE
+application.vs.query = Créer la requête sur VS
 
 /*---AuditTrail---*/
-auditTrailPage.ListOfAuditTrail =
-auditTrailPage.dateTime =
+auditTrailPage.ListOfAuditTrail = Liste des Audit trails
+auditTrailPage.dateTime = Dernière mise à jour du formulaire
 
 /*---CRA---*/
-application.monitor =
-application.non.monitor =
+application.monitor = Revu
+application.non.monitor = Non revu
 
 /*---Mail---*/
 newSAE = Un nouveau SAE a été rapporté pour le sujet
