--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -340,7 +340,8 @@ messageErrorAeterm = AE description is mandatory
 messageErrorAestdatFuture = Start date can not be in the future
 messageErrorAeendatFuture = End date can not be in the future
 messageErrorAestdatMis = Please specify the Start date
-messageErrorAaeser = As this event is reported as serious, at least one seriousness criterion should be Yes
+messageErrorAeser = As this event is reported as serious, at least one seriousness criterion should be Yes
+messageErrorAeFatal = The outcome and the seriousness criteria are not consistent, please correct
 
 /*--CM--*/
 cmPage.addCmTitle = Create a form Concomitant medication
