--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -340,7 +340,8 @@ messageErrorAeterm = La description de l'EI est obligatoire
 messageErrorAestdatFuture = La Date de début ne peut pas être dans le futur
 messageErrorAeendatFuture = La Date de fin ne peut pas être dans le futur
 messageErrorAestdatMis = Veuillez spécifier la date de début
-messageErrorAaeser = L'évènement étant rapporté comme sérieux, au moins un critère de sévérité doit être répondu Oui
+messageErrorAeser = L'évènement étant rapporté comme sérieux, au moins un critère de sévérité doit être répondu Oui
+messageErrorAeFatal = L'issue et les critères de gravité ne sont pas cohérents, veuillez corriger
 
 /*--CM--*/
 cmPage.addCmTitle = Créer un formulaire de Traitement concomitant
