--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -50,6 +50,7 @@ menu.data.CRA = Monitoring
 menu.data.CRA.to.validate = Events to monitor
 menu.MEDICAL = Medical Review
 menu.data.MEDICAL = Coding
+menu.data.MEDICAL.Coding = Coding MedDra and WHODrug
 menu.data.MEDICAL.to.CodeAe = MedDRA Coding
 menu.data.MEDICAL.to.CodeCm = WHODrug Coding
 menu.query = Query
@@ -204,6 +205,7 @@ dovPage.visitDate = Date of visit
 messageErrorVisitDate = The date of visit cannot be in the future
 application.create.dov = Create the form Date of visit
 application.update.dov = Update the form Date of visit
+eventsPage.ListOfEventsMedical = List of all medical events
 
 /*---IC---*/
 icPage.addIcTitle = Create a form Informed consent
@@ -427,6 +429,7 @@ application.dov.query = Create a query on DOV
 application.ic.query = Create a query on IC
 application.te.query = Create a query on TE
 application.vs.query = Create a query on VS
+query.ListOfQueries = list of all queries
 
 /*---AuditTrail---*/
 auditTrailPage.ListOfAuditTrail = List of audit trails
