--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -50,6 +50,7 @@ menu.data.CRA = Monitoring
 menu.data.CRA.to.validate = Évènements à revoir
 menu.MEDICAL = Revue médicale
 menu.data.MEDICAL = Coding
+menu.data.MEDICAL.Coding = Coding MedDra and WHODrug
 menu.data.MEDICAL.to.CodeAe = Coding MedDra
 menu.data.MEDICAL.to.CodeCm = Coding WHODrug
 menu.query = Requête
@@ -204,6 +205,7 @@ dovPage.visitDate = Date de visite
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
 application.create.dov = Créer le formulaire Date de visite
 application.update.dov = Mettre à jour le formulaire Date de visite
+eventsPage.ListOfEventsMedical = Liste de tous les évènements médicaux
 
 /*---IC---*/
 icPage.addIcTitle = Créer un formulaire de Consentement éclairé
@@ -427,6 +429,7 @@ application.dov.query = Créer la requête sur DOV
 application.ic.query = Créer la requête sur IC
 application.te.query = Créer la requête sur TE
 application.vs.query = Créer la requête sur VS
+query.ListOfQueries = Liste de toutes les requêtes
 
 /*---AuditTrail---*/
 auditTrailPage.ListOfAuditTrail = Liste des Audit trails
