--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -198,9 +198,9 @@ done = Done
 notDone = Not Done
 dovPage.visitNd = Please specify why the visit is not done
 dovPage.visitNd.placeholder = Please specify why the visit is not done
-messageErrorVisitNd = This field must be completed if the visit is done
-messageErrorVisitNdFalse = This field can only be completed if the visit is not
-messageErrorVisitDateMissing = The date must be entered if the visit is performed
+messageErrorVisitNd = The visit is reported as not done, please provide the reason or correct
+messageErrorVisitNdFalse = The visit is reported as not done, please provide the reason or correct
+messageErrorVisitDateMissing = The visit is reported as performed, please provide the date of visit or correct
 dovPage.visitDate = Date of visit 
 messageErrorVisitDate = The date of visit cannot be in the future
 application.create.dov = Create the form Date of visit
@@ -445,3 +445,7 @@ dear =Dear Study team, \n\nThe following Serious Adverse Event has been submitte
 dear2 =Dear Study team, \n\nThe following Serious Adverse Event has been updated in your study.
 team =Kind Regards,\n\nThe SYM-022 Study team
 reminder= Kind Reminder: Any SAE must be reported within 24 hours of investigator learning about the event 
+
+/**---List for Coding---**/
+description = Description
+pt = Preferred term
