--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -198,9 +198,9 @@ done = Réalisé(e)
 notDone = Non réalisé(e)
 dovPage.visitNd = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée 
 dovPage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée
-messageErrorVisitNd = Ce champ doit être rempli si la visite n'a pas été réalisée
-messageErrorVisitNdFalse = Ce champ ne peut être rempli que si la visite n'a pas été réalisée
-messageErrorVisitDateMissing = La date de visite est obligatoire si celle-ci a été réalisée
+messageErrorVisitNd = La visite est indiquée comme non réalisée, veuillez svp fournir la raison ou corriger
+messageErrorVisitNdFalse = La visite est indiquée comme non réalisée, veuillez svp fournir la raison ou corriger
+messageErrorVisitDateMissing = La visite est indiquée comme réalisée, veuillez svp fournir la date de visite.
 dovPage.visitDate = Date de visite 
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
 application.create.dov = Créer le formulaire Date de visite
@@ -446,3 +446,7 @@ dear = Chère Équipe clinique, \n\nL'évènement indésirable sérieux suivant a été 
 dear2 = Chère Équipe clinique, \n\nL'évènement indésirable sérieux suivant a été mis à jour pour votre étude.
 team =Cordialement,\n\nL'Équipe SYM-022
 reminder= Rappel: Tout évènement indésirable sérieux doit être rapporté endéans les 24 heures après la prise de connaissance par l'investigateur 
+
+/**---List for Coding---**/
+description = Description
+pt = Terme préféré
