--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -225,10 +225,13 @@ icPage.ie_not_met = Criteria not met
 dmPage.addDmTitle = Create a form Demography
 dmPage.year = Year of birth 
 dmPage.year.placeholder = Must be between 1920 and 2005
-dmPage.year.errorMessage = The year of birth must be between 1920 et 2005
-dmPage.sex = Sex 
+dmPage.year.errorMessage = The year of birth provided is not between 1920 et 2005, please correct
+dmPage.sex = Sex at birth
 dmPage.ethnicity = Ethnicity 
 dmPage.culture = Cultural background 
+messageErrorDmSex = Please provide sex at birth
+messageErrorDmEthnicity = Please provide ethnicity
+messageErrorDmCulture = Please provide cultural background
 
 /*---VS---*/
 vsPage.addVsTitle = Create a form Vital signs
