--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -225,10 +225,13 @@ icPage.ie_not_met = Critère non respecté
 dmPage.addDmTitle = Créer un formulaire Démographie
 dmPage.year = Année de naissance 
 dmPage.year.placeholder = Doit être 1920 et 2005
-dmPage.year.errorMessage = L'année de naissance doit être entre 1920 et 2005
+dmPage.year.errorMessage = L'année de naissance indiquée n'est pas dans le range attendu (1920 - 2005), veuillez corriger
 dmPage.sex = Sexe 
 dmPage.ethnicity = Origine Ethnique
 dmPage.culture = Identité Culturelle
+messageErrorDmSex = Veuillez svp fournir le sexe à la naissance
+messageErrorDmEthnicity = Veuillez svp fournir l'origine ethnique
+messageErrorDmCulture = Veuillez svp fournir l'identité culturelle
 
 /*---VS---*/
 vsPage.addVsTitle = Créer un formulaire Signes vitaux
