--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -252,18 +252,18 @@ vsPage.weight.errorMessage = Please specify Weight or report this assessment as 
 vsPage.weight.unit = Weight unit
 messageErrorWeightUnitNull = Please specify the unit for the weight
 vsPage.bpNd = Blood pressure assessment 
-vsPage.input_sbp = Systolic blood pressure
+vsPage.input_sbp = Systolic blood pressure (mmHg)
 vsPage.input_sbp.placeholder = Please specify Systolic blood pressure value
 vsPage.input_sbp.errorMessage = Please specify Systolic blood pressure or report this assessment as not done
-vsPage.input_dbp = Diastolic blood pressure
+vsPage.input_dbp = Diastolic blood pressure (mmHg)
 vsPage.input_dbp.placeholder = Please specify Diastolic blood pressure value
 vsPage.input_dbp.errorMessage = Please specify Diastolic blood pressure or report this assessment as not done
 vsPage.hrNd = Heart rate assessment
-vsPage.input_hr = Heart rate
+vsPage.input_hr = Heart rate (bpm)
 vsPage.input_hr.placeholder = Please specify Heart rate value
 vsPage.input_hr.errorMessage = Please specify Heart rate or report this assessment as not done
 vsPage.rrNd = Respiratory rate assessment
-vsPage.input_rr = Respiratory rate
+vsPage.input_rr = Respiratory rate (bpm)
 vsPage.input_rr.placeholder = Please specify Respiratory rate value
 vsPage.input_rr.errorMessage = Please specify Respiratory rate or report this assessment as not done
 vsPage.tempNd = Temperature assessment
@@ -275,7 +275,7 @@ messageErrorTempUnitNull = Please specify the unit for the temperature
 vsPage.tempRoute = Route temperature
 messageErrorTempRoute = Please specify the route for the temperature
 vsPage.oxyNd = Oxygen saturation assessment
-vsPage.input_oxy = Oxygen saturation
+vsPage.input_oxy = Oxygen saturation (%)
 vsPage.input_oxy.placeholder = Please specify Oxygen saturation value
 vsPage.input_oxy.errorMessage = Please specify Oxygen saturation or report this assessment as not done
 messageErrorHeightCm = Height is not in the expected range with the selected unit
