--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -252,17 +252,17 @@ vsPage.weight.errorMessage = Veuillez spécifier le Poids ou confirmer cette mesu
 vsPage.weight.unit = Unité de poids
 messageErrorWeightUnitNull = Veuillez spécifier l'unité pour le poids
 vsPage.bpNd = Mesure de la pression sanguine
-vsPage.input_sbp = Pression sanguine systolique
+vsPage.input_sbp = Pression sanguine systolique (mmHg)
 vsPage.input_sbp.placeholder = Veuillez spécifier la Pression sanguine systolique
 vsPage.input_sbp.errorMessage = Veuillez spécifier la Pression sanguine systolique ou confirmer cette mesure comme non réalisée
-vsPage.input_dbp = Pression sanguine diastolique
+vsPage.input_dbp = Pression sanguine diastolique (mmHg)
 vsPage.input_dbp.placeholder = Veuillez spécifier la Pression sanguine diastolique
 vsPage.input_dbp.errorMessage = Veuillez spécifier la Pression sanguine diastolique ou confirmer cette mesure comme non réalisée
-vsPage.hrNd = Mesure de la fréquence cardiaque
+vsPage.hrNd = Mesure de la fréquence cardiaque (bpm)
 vsPage.input_hr = Fréquence cardiaque
 vsPage.input_hr.placeholder = Veuillez spécifier la Fréquence cardiaque
 vsPage.input_hr.errorMessage = Veuillez spécifier la Fréquence cardiaque ou confirmer cette mesure comme non réalisée
-vsPage.rrNd = Mesure de la fréquence respiratoire
+vsPage.rrNd = Mesure de la fréquence respiratoire (rpm)
 vsPage.input_rr = Fréquence respiratoire
 vsPage.input_rr.placeholder = Veuillez spécifier la Fréquence respiratoire
 vsPage.input_rr.errorMessage = Veuillez spécifier la Fréquence respiratoire ou confirmer cette mesure comme non réalisée
@@ -275,7 +275,7 @@ messageErrorTempUnitNull = Veuillez spécifier l'unité pour la température
 vsPage.tempRoute = Voie de mesure de la température
 messageErrorTempRoute = Veuillez spécifier la voie pour la température
 vsPage.oxyNd = Mesure de la saturation en oxygène
-vsPage.input_oxy = Saturation en oxygène
+vsPage.input_oxy = Saturation en oxygène (%)
 vsPage.input_oxy.placeholder = Veuillez spécifier la Saturation en oxygène
 vsPage.input_oxy.errorMessage = Veuillez spécifier la Saturation en oxygène ou confirmer cette mesure comme non réalisée
 messageErrorHeightCm = La taille n'est pas dans la gamme de valeurs attendues pour l'unité sélectionnée
@@ -303,7 +303,7 @@ tePage.non.target.lesion = Lésions Non Cibles
 tePage.new.lesion.status = Nouvelle Lésion 
 tePage.overall.response = Réponse Globale 
 application.create.te = Créer le formulaire d'Evaluation tumorale
-messageErrorOR = La Réponse Globale ne coïncide pas avec les résultats précédents de l'évaluation
+messageErrorOR = 0
 
 /*--AE--*/
 aePage.addAeTitle = Créer un formulaire d'évènement indésirable
