testing end 17Sep

--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -200,7 +200,7 @@ dovPage.visitNd = Please specify why the visit is not done
 dovPage.visitNd.placeholder = Please specify why the visit is not done
 messageErrorVisitNd = The visit is reported as not done, please provide the reason or correct
 messageErrorVisitNdFalse = The visit is reported as not done, please provide the reason or correct
-messageErrorVisitDateMissing = The visit is reported as performed, please provide the date of visit or correct
+messageErrorVisitDateMissing = The visit is mandatory or reported as performed, please provide the date of visit or correct
 dovPage.visitDate = Date of visit 
 messageErrorVisitDate = The date of visit cannot be in the future
 application.create.dov = Create the form Date of visit
@@ -239,6 +239,7 @@ vsPage.status = Were vital signs collected?
 vsPage.vsNd = Please specify the reason why the vital signs were not collected
 vsPage.vsNd.placeholder = Please specify the reason why vital signs were not collected
 vsPage.vsDate = Date of assessment
+messageErrorVsDateMissing = Vital signs are reported as performed, please provide the collection date or correct
 vsPage.heightNd = Height assessment
 vsPage.height = Height
 vsPage.height.placeholder = Please specify Height value
@@ -297,13 +298,15 @@ tePage.addTeTitle = Create a form Tumoral evaluation
 tePage.status = Was tumoral evaluation performed?
 tePage.visitNd = Please specify the reason why tumoral evaluation is not done
 tePage.visitNd.placeholder = Please specify the reason why tumoral evaluation is not done
+messageErrorTeNdFalse = The Tumoral evaluation is reported as not done, please provide the reason or correct
 tePage.visitDate = Date of assessment
+messageErrorTeDateMissing = The Tumoral evaluation is reported as performed, please provide the date of assessment or correct
 tePage.target.lesion = Target Lesions
 tePage.non.target.lesion = Non Target Lesions
 tePage.new.lesion.status = New Lesion
 tePage.overall.response = Overall Response
 application.create.te = Create thr form Tumoral evaluation
-messageErrorOR = This Overall Response does not match with previous evaluation results
+messageErrorOR = This Overall Response does not match with previous evaluation results or at least one answer is missing
 
 /*--AE--*/
 aePage.addAeTitle = Create a form Adverse event
@@ -444,6 +447,7 @@ application.non.monitor = Not monitored
 
 /*---Mail---*/
 newSAE =A new SAE has been submitted for the subject
+updateSAE = A SAE has been updated for the subject
 dear =Dear Study team, \n\nThe following Serious Adverse Event has been submitted in your study.
 dear2 =Dear Study team, \n\nThe following Serious Adverse Event has been updated in your study.
 team =Kind Regards,\n\nThe SYM-022 Study team
