--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -200,7 +200,7 @@ dovPage.visitNd = Veuillez spécifier la  raison pour laquelle la visite n'a pas 
 dovPage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle la visite n'a pas été réalisée
 messageErrorVisitNd = La visite est indiquée comme non réalisée, veuillez svp fournir la raison ou corriger
 messageErrorVisitNdFalse = La visite est indiquée comme non réalisée, veuillez svp fournir la raison ou corriger
-messageErrorVisitDateMissing = La visite est indiquée comme réalisée, veuillez svp fournir la date de visite.
+messageErrorVisitDateMissing = La visite est obligatoire ou indiquée comme réalisée, veuillez svp fournir la date de visite.
 dovPage.visitDate = Date de visite 
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
 application.create.dov = Créer le formulaire Date de visite
@@ -239,6 +239,7 @@ vsPage.status = Les signes vitaux ont-ils été collectés?
 vsPage.vsNd = Veuillez spécifier la  raison pour laquelle les signes vitaux n'ont pas été collectés
 vsPage.vsNd.placeholder = Veuillez spécifier la  raison pour laquelle les signes vitaux n'ont pas été collectés
 vsPage.vsDate = Date de l'évaluation
+messageErrorVsDateMissing = Les Signes vitaux sont rapportés comme réalisés, veuillez fournir la date ou corriger
 vsPage.heightNd = Mesure de la taille
 vsPage.height = Taille
 vsPage.height.placeholder = Veuillez spécifier la Taille
@@ -258,12 +259,12 @@ vsPage.input_sbp.errorMessage = Veuillez spécifier la Pression sanguine systoliq
 vsPage.input_dbp = Pression sanguine diastolique (mmHg)
 vsPage.input_dbp.placeholder = Veuillez spécifier la Pression sanguine diastolique
 vsPage.input_dbp.errorMessage = Veuillez spécifier la Pression sanguine diastolique ou confirmer cette mesure comme non réalisée
-vsPage.hrNd = Mesure de la fréquence cardiaque (bpm)
-vsPage.input_hr = Fréquence cardiaque
+vsPage.hrNd = Mesure de la fréquence cardiaque 
+vsPage.input_hr = Fréquence cardiaque (bpm)
 vsPage.input_hr.placeholder = Veuillez spécifier la Fréquence cardiaque
 vsPage.input_hr.errorMessage = Veuillez spécifier la Fréquence cardiaque ou confirmer cette mesure comme non réalisée
-vsPage.rrNd = Mesure de la fréquence respiratoire (rpm)
-vsPage.input_rr = Fréquence respiratoire
+vsPage.rrNd = Mesure de la fréquence respiratoire 
+vsPage.input_rr = Fréquence respiratoire (rpm)
 vsPage.input_rr.placeholder = Veuillez spécifier la Fréquence respiratoire
 vsPage.input_rr.errorMessage = Veuillez spécifier la Fréquence respiratoire ou confirmer cette mesure comme non réalisée
 vsPage.tempNd = Mesure de la température
@@ -297,13 +298,15 @@ tePage.addTeTitle = Créer un formulaire d'Évaluation tumorale
 tePage.status = L'évaluation tumorale a-t'-elle été réalisée?
 tePage.visitNd = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
 tePage.visitNd.placeholder = Veuillez spécifier la  raison pour laquelle l'évaluation tumorale n'a pas été réalisée
+messageErrorTeNdFalse = L'évaluation tumorale est rapportée comme non réalisée, veuillez fournir la raison ou corriger la réponse
 tePage.visitDate = Date de l'évaluation 
+messageErrorTeDateMissing = L'Évaluation tumorale est rapportée comme réalisée, veuillez fournir la date de l'évaluation ou corriger
 tePage.target.lesion = Lésions Cibles 
 tePage.non.target.lesion = Lésions Non Cibles 
 tePage.new.lesion.status = Nouvelle Lésion 
 tePage.overall.response = Réponse Globale 
 application.create.te = Créer le formulaire d'Evaluation tumorale
-messageErrorOR = 0
+messageErrorOR = La Réponse globale ne coïncide pas avec  les résultats de l'évaluation précédents ou au moins une réponse est manquante
 
 /*--AE--*/
 aePage.addAeTitle = Créer un formulaire d'évènement indésirable
@@ -345,7 +348,7 @@ messageErrorAeterm = La description de l'EI est obligatoire
 messageErrorAestdatFuture = La Date de début ne peut pas être dans le futur
 messageErrorAeendatFuture = La Date de fin ne peut pas être dans le futur
 messageErrorAestdatMis = Veuillez spécifier la date de début
-messageErrorAeser = L'évènement étant rapporté comme sérieux, au moins un critère de sévérité doit être répondu Oui
+messageErrorAeser = L'évènement étant rapporté comme sérieux, au moins un critère de gravité doit être répondu Oui
 messageErrorAeFatal = L'issue et les critères de gravité ne sont pas cohérents, veuillez corriger
 
 /*--CM--*/
@@ -356,7 +359,7 @@ messageErrorCmtermFalse = le Nom du traitement est obligatoire
 cmPage.cmtermc = Terme préféré - CM
 cmPage.cmtermc.placeHolder = Veuillez spécifier le Terme préféré - CM
 cmPage.cmstdat = Date de début
-cmPage.ttcmstdat = Si le jour et le mois sont inconnus, choisir 01JAN
+cmPage.ttcmstdat = c
 cmPage.cmong = En cours
 cmPage.cmendat = Date de fin
 cmPage.ttcmendat = Si le jour et le mois sont inconnus, choisir 31DEC ou le dernier jour du mois.
@@ -444,7 +447,7 @@ application.non.monitor = Non revu
 
 /*---Mail---*/
 newSAE = Un nouveau SAE a été rapporté pour le sujet
-updateSAE = Un SAE a été rmis à jour pour le sujet
+updateSAE = Un SAE a été mis à jour pour le sujet
 dear = Chère Équipe clinique, \n\nL'évènement indésirable sérieux suivant a été soumis pour votre étude.
 dear2 = Chère Équipe clinique, \n\nL'évènement indésirable sérieux suivant a été mis à jour pour votre étude.
 team =Cordialement,\n\nL'Équipe SYM-022
