--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -87,6 +87,8 @@ add = has been created
 update = has been updated
 inactive = has been inactivated
 reactive = has been reactivated
+monitor = has been monitored
+nonMonitor = has been non-monitored
 closed = has been closed
 open = has been reopened
 for = for
