--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -87,6 +87,8 @@ add = a bien été créé
 update = a bien été mis à jour
 inactive = a bien été désactivé
 reactive = a bien été réactivé
+monitor = a bien été modifié comme revu
+nonMonitor = a bien été modifié comme non revu
 closed = a bien été cloturé
 open = a bien été réouverte
 for = pour
