--- a/src/main/resources/language/messages_en.properties
+++ b/src/main/resources/language/messages_en.properties
@@ -49,10 +49,10 @@ menu.CRA = CRA
 menu.data.CRA = Monitoring
 menu.data.CRA.to.validate = Events to monitor
 menu.MEDICAL = Medical Review
-menu.data.MEDICAL = Coding
-menu.data.MEDICAL.Coding = Coding MedDra and WHODrug
-menu.data.MEDICAL.to.CodeAe = MedDRA Coding
-menu.data.MEDICAL.to.CodeCm = WHODrug Coding
+menu.data.MEDICAL = Medical Coding
+menu.data.MEDICAL.Coding = All medical terms
+menu.data.MEDICAL.to.CodeAe = Coding MedDRA 
+menu.data.MEDICAL.to.CodeCm = Coding WHODrug 
 menu.query = Query
 menu.data.query = Query management
 menu.data.query.to.consult = Consult Queries
@@ -205,7 +205,7 @@ dovPage.visitDate = Date of visit
 messageErrorVisitDate = The date of visit cannot be in the future
 application.create.dov = Create the form Date of visit
 application.update.dov = Update the form Date of visit
-eventsPage.ListOfEventsMedical = List of all medical events
+eventsPage.ListOfEventsMedical = List of all medical terms
 
 /*---IC---*/
 icPage.addIcTitle = Create a form Informed consent
