--- a/src/main/resources/language/messages_fr.properties
+++ b/src/main/resources/language/messages_fr.properties
@@ -49,10 +49,10 @@ menu.CRA = ARC
 menu.data.CRA = Monitoring
 menu.data.CRA.to.validate = Évènements à revoir
 menu.MEDICAL = Revue médicale
-menu.data.MEDICAL = Coding
-menu.data.MEDICAL.Coding = Coding MedDra and WHODrug
-menu.data.MEDICAL.to.CodeAe = Coding MedDra
-menu.data.MEDICAL.to.CodeCm = Coding WHODrug
+menu.data.MEDICAL = Codage médicale
+menu.data.MEDICAL.Coding = Liste  des termes médicaux
+menu.data.MEDICAL.to.CodeAe = Code MedDRA
+menu.data.MEDICAL.to.CodeCm = Code WHODrug
 menu.query = Requête
 menu.data.query = Gestion des requêtes
 menu.data.query.to.consult = Consulter les requêtes
@@ -205,7 +205,7 @@ dovPage.visitDate = Date de visite
 messageErrorVisitDate = La date de visite ne peut pas être dans le futur
 application.create.dov = Créer le formulaire Date de visite
 application.update.dov = Mettre à jour le formulaire Date de visite
-eventsPage.ListOfEventsMedical = Liste de tous les évènements médicaux
+eventsPage.ListOfEventsMedical = Liste de tous les termes médicaux
 
 /*---IC---*/
 icPage.addIcTitle = Créer un formulaire de Consentement éclairé
